--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="libs/font-awesome/css/all.css">
 
-	<link rel="shortcut icon" href="/media/logo.png" type="image/png">
+	<link rel="shortcut icon" href="media/logo.png" type="image/png">
 </head>
 
 <body>
